Bug 90720 - FILEOPEN: Docx textbox with 'no fill' is rendered with white background colour.
Summary: FILEOPEN: Docx textbox with 'no fill' is rendered with white background colour.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.4.1.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.0.0
Keywords:
: 61766 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-04-19 18:34 UTC by Sushil Shinde
Modified: 2015-05-02 13:32 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
this file contains combinations textboxes with 'no fill', Transparent fill and solid fill. (11.84 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2015-04-19 18:34 UTC, Sushil Shinde
Details
This is how MS word renders text-boxes without fill. (81.33 KB, image/png)
2015-04-20 07:42 UTC, Sushil Shinde
Details
This is how LO writer imported those text boxes. (287.96 KB, image/png)
2015-04-20 07:48 UTC, Sushil Shinde
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sushil Shinde 2015-04-19 18:34:03 UTC
Created attachment 114920 [details]
this file contains combinations textboxes with 'no fill', Transparent fill and solid fill.

Steps to Reproduce:

1. Open attached file on latest LO master.


Current behaviour : 
Textbox background with 'no fill' are rendered with white background.

Expected behaviour:
Textbox background should be transparent.
Comment 1 Alex Thurgood 2015-04-20 07:15:28 UTC
@Sushil : I can confirm this with 

Version: 4.4.2.2
Build ID: c4c7d32d0d49397cad38d62472b0bc8acff48dd6
Locale : fr_

but why do you think this is a bug ? Did it work differently in previous versions of LibreOffice ? How do you expect it to work ? How does it display in Word ?

'No fill' appears to takes the default document background colour that is set in the Preferences > General > Appearance. This is not the same as transparency. 

Setting to NEEDINFO, as I am not quite grasping what the problem is. Perhaps if you could provide details of what you see in Word, and what you expect to see in LibreOffice, we might eb able to move this bug report further.
Comment 2 Sushil Shinde 2015-04-20 07:42:33 UTC
Created attachment 114944 [details]
This is how MS word renders text-boxes without fill.
Comment 3 Sushil Shinde 2015-04-20 07:48:01 UTC
Created attachment 114945 [details]
This is how LO writer imported those text boxes.

@Alex Thurgood :
In MS word, Text-boxes with no fill are rendered as transparent text-boxes.
You can see in screen shot, In text-box "text1" and "text2", behind shape color is clearly visible.
But when we open same file on LO writer. It renders those shapes with white background
hence color from from behind shape is not visible.
Comment 4 A (Andy) 2015-04-20 18:46:25 UTC
Reproducible with LO 4.4.1.2, Win 8.1 (also the difference to MSO is reproducible)

For me this is an undesired behaviour if I compare it with MSO.  Therefore, I would see it as Status = NEW.
Comment 5 Commit Notification 2015-04-30 08:33:32 UTC
Sushil Shinde committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=049e84125fb76f7a1a051d7cac2e04e37a7cd190

tdf#90720 Textframe background was not transparent

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Jorendc 2015-05-02 13:32:06 UTC
*** Bug 61766 has been marked as a duplicate of this bug. ***